# ink-tips

./: .gitignore  Cargo.toml  LICENSE  README.md
multi_flipper/: Cargo.toml  lib.rs
multi_flipper/multi_flipper/flippers/: entity.rs  messages.rs  mod.rs  store.rs
multi_flipper/multi_flipper/tests/: env_utils.rs  mod.rs  test_multi_flipper.rs
